<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/user_info">
        <EditTextPreference
            android:key="@string/user_name"
            android:summary="Please provide your username"
            android:title="@string/user_title"/>
        <!--
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="applicationUpdates"
            android:summary="This option if selected will allow the application to check for latest versions."
            android:title="Application Updates"/>
            -->
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/map_file_server">
        <ListPreference
            android:entries="@array/MapFileServers"
            android:entryValues="@array/MapFileValues"
            android:key="@string/map_server_ip"
            android:summary="@string/select_map_server"
            android:title="@string/map_file_servers"
            android:defaultValue="@string/local_net_gpx_server"
            />
        <!--
        <SwitchPreference>

        </SwitchPreference>
        -->
    </PreferenceCategory>
</PreferenceScreen>