<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@id/bar"
    android:paddingTop="60dp"
    tools:context="com.mgjg.kmztracker.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/GPS_INFO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/GPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gps_on_off" />

        <TextView
            android:id="@+id/GPS_LAT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/lat"
            tools:text="lat" />

        <TextView
            android:id="@+id/GPS_LON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/lon"
            tools:text="lon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CUESHEET_INFO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/GPS_INFO"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/READ_CUESHEET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/CUESHEET"
            android:onClick="setCueSheetFromXml"
            android:text="@string/load" />

        <EditText
            android:id="@id/CUESHEET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textAutoComplete"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/map_file"
            tools:text="@string/ToolsMapFile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CUESHEET_MOVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CUESHEET_INFO"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/MOVE_START"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="moveToStart"
            android:text="@string/start" />

        <Button
            android:id="@+id/MOVE_NEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="moveNext"
            android:text="@string/next" />

        <Button
            android:id="@+id/MOVE_END"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="moveToEnd"
            android:text="@string/end" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/CUESHEET_MOVE"
        android:clickable="true"
        android:focusable="true"
        />
        <!-- tools:layout="@android:layout/simple_gallery_item" -->

    <!--
    <com.google.android.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/GPS"
        android:clickable="true" />
    -->
    <!-- 83:30:6D:A2:03:2E:B8:2F:FC:3B:39:4D:63:1E:49:88 -->
    <!-- E3:6F:8A:33:8B:AB:89:26:82:DF:1A:7E:C3:AA:D0 -->
</RelativeLayout>
